fix(ui): Cleanup and modify build.gradle