@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 group = 'ac.cwnu'
@@ -8,6 +9,11 @@ version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+}
+
+javafx {
+    version = '21.0.1' // Must match the version used in :ui module
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
 }
 
 dependencies {
@@ -20,7 +26,7 @@ dependencies {
     implementation project(':lyrics')
     implementation project(':ui')
 //    implementation project(':stub') // Include the stub module for testing purposes
-    
+
     // for testing
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
@@ -30,10 +36,15 @@ application {
     mainClass = 'ac.cwnu.synctune.Main'
     // JavaFX 실행을 위한 JVM 인수 추가
     applicationDefaultJvmArgs = [
-        '--add-opens', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
+            '--add-modules', 'javafx.controls,javafx.fxml,javafx.graphics',
+            '--add-opens', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+            '--add-opens', 'javafx.fxml/javafx.fxml=ALL-UNNAMED'
     ]
 }
 
 test {
     useJUnitPlatform()
+}
+java {
+    modularity.inferModulePath = true
 }
